CRUD for Events and linkage with SC + IPFS
Bugs for updating db
